--- a/css/theme/final-frontier.css
+++ b/css/theme/final-frontier.css
@@ -25,7 +25,6 @@ body {
   font-size: 40px;
   font-weight: normal;
   color: #eee;
-  text-shadow: 0px 0px 8px #000000;
 }
 
 ::selection {
@@ -66,12 +65,10 @@ body {
   font-size: 2.77em; }
 
 .reveal h2 {
-  font-size:2.1em; }
+  font-size:2.5em; }
 
 .reveal .ten7 {
-  font-family: "Antonio", Impact, sans-serif;
-  font-weight: 700;
-  text-transform: uppercase;
+  font-family: "Stardate 81316", Impact, sans-serif;
   color: #bed600;
 }
 
@@ -157,21 +154,22 @@ body {
   display: block;
   position: relative;
   width: 90%;
-  margin: 20px auto;
   text-align: left;
   font-size: 0.55em;
   font-family: "Source Code Pro";
   line-height: 1.2em;
   word-wrap: break-word;
+  border-left: solid 1.5rem #123b66;
+  border-top: solid .5rem #123b66;
+  border-radius: 1.7rem 0.5rem 0.5rem 1.7rem;
 }
 
 .hljs {
   display: block;
   overflow-x: auto;
-  padding: 0.5em;
-  background: #000000;
+  padding: .5em;
+  background: #111111;
   color: #00ff0f;
-  border-radius: 0.5rem;
 }
 
 .reveal code {
@@ -183,7 +181,9 @@ body {
   padding: 5px;
   overflow: auto;
   max-height: 400px;
-  word-wrap: normal; }
+  word-wrap: normal;
+  padding: 1rem 1rem 1rem 1rem;
+}
 
 .reveal table {
   margin: auto;
@@ -279,7 +279,7 @@ body {
  *********************************************/
 .reveal .progress {
   background: rgba(0, 0, 0, 0.2);
-  color: #e7ad52; }
+  color: #3d61b7; }
 
 .reveal .progress span {
   -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
