--- a/css/theme/final-frontier.css
+++ b/css/theme/final-frontier.css
@@ -73,7 +73,7 @@ body {
 }
 
 .reveal h3 {
-  font-size: 1.6em; }
+  font-size: 2.2em; }
 
 .reveal h4 {
   font-size: 1em; }
@@ -174,7 +174,8 @@ body {
 
 .reveal code {
   font-family: "Source Code Pro";
-  text-transform: none; }
+  text-transform: none;
+}
 
 .reveal pre code {
   display: block;
