--- a/css/theme/final-frontier.css
+++ b/css/theme/final-frontier.css
@@ -69,7 +69,8 @@ body {
 
 .reveal .ten7 {
   font-family: "Stardate 81316", Impact, sans-serif;
-  color: #bed600;
+  color: white;
+  text-shadow: 5px 5px 20px rgba(0, 0, 0, 1);
 }
 
 .reveal h3 {
